--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  <title>Document</title>
 </head>
+
 <body>
-    
+  <nav>
+    <div class="logos">
+      <img src="./images/logo (1).png" alt="">
+      <h2>CodingLab</h2>
+    </div>
+    <div class="nav_list">
+      <ul class="lists">
+        <li><i class='bx bx-home-alt'></i><a href="">Dashboard</a></li>
+        <li><i class='bx bx-book-content'></i><a href="#">Content</a></li>
+        <li><i class='bx bx-bar-chart-square'></i><a href="#">Analytics</a></li>
+        <li><i class='bx bx-like'></i><a href="#">Like</a></li>
+        <li><i class='bx bx-chat'></i><a href="#">Comment</a></li>
+        <li><i class='bx bx-share'></i><a href="#">Share</a></li>
+      </ul>
+    </div>
+    <div class="nav_list_bottom">
+      <ul>
+        <li> <i class='bx bx-exit'></i><a href="#"></i>Logout</a></li>
+        <li><i class='bx bx-moon' id="moon"></i><a href="#"> Dark mode</a><input type="checkbox" class="switch" name=""
+            id=""></li>
+      </ul>
+    </div>
+  </nav>
 </body>
+
 </html>
