--- a/index.html
+++ b/index.html
@@ -10,29 +10,51 @@
 </head>
 
 <body>
-  <nav>
-    <div class="logos">
-      <img src="./images/logo (1).png" alt="">
-      <h2>CodingLab</h2>
-    </div>
-    <div class="nav_list">
-      <ul class="lists">
-        <li><i class='bx bx-home-alt'></i><a href="">Dashboard</a></li>
-        <li><i class='bx bx-book-content'></i><a href="#">Content</a></li>
-        <li><i class='bx bx-bar-chart-square'></i><a href="#">Analytics</a></li>
-        <li><i class='bx bx-like'></i><a href="#">Like</a></li>
-        <li><i class='bx bx-chat'></i><a href="#">Comment</a></li>
-        <li><i class='bx bx-share'></i><a href="#">Share</a></li>
-      </ul>
-    </div>
-    <div class="nav_list_bottom">
-      <ul>
-        <li> <i class='bx bx-exit'></i><a href="#"></i>Logout</a></li>
-        <li><i class='bx bx-moon' id="moon"></i><a href="#"> Dark mode</a><input type="checkbox" class="switch" name=""
-            id=""></li>
-      </ul>
-    </div>
-  </nav>
+  <div class="continer">
+    <nav>
+      <div class="logos">
+        <img src="./images/logo (1).png" alt="">
+        <h2>CodingLab</h2>
+      </div>
+      <div class="nav_list">
+        <ul class="lists">
+          <li><i class='bx bx-home-alt'></i><a href="">Dashboard</a></li>
+          <li><i class='bx bx-book-content'></i><a href="#">Content</a></li>
+          <li><i class='bx bx-bar-chart-square'></i><a href="#">Analytics</a></li>
+          <li><i class='bx bx-like'></i><a href="#">Like</a></li>
+          <li><i class='bx bx-chat'></i><a href="#">Comment</a></li>
+          <li><i class='bx bx-share'></i><a href="#">Share</a></li>
+        </ul>
+      </div>
+      <div class="nav_list_bottom">
+        <ul>
+          <li> <i class='bx bx-exit'></i><a href="#"></i>Logout</a></li>
+          <li><i class='bx bx-moon' id="moon"></i><a href="#"> Dark mode</a><input type="checkbox" class="switch" name=""
+              id=""></li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <header class="head">
+        <i class='bx bx-menu'></i>
+        <div class="search">
+            <i class='bx bx-search-alt-2'></i>
+            <input type="text" placeholder="Search here...">
+        </div>
+        <div class="profile_img"> <img src="./images/profile.jpg" alt=""></div>
+    </header>
+    <div>
+      <div class="main">
+        <div class="dashboards_descriptions">
+            <div class="speed_icons">
+                <i class='bx bx-stopwatch'></i>
+            </div>
+              <h1>Dashboard</h1>
+        </div>
+      </div>
+    </main>
+  </div>
+  
 </body>
 
 </html>
