--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
             </div>
               <h1>Dashboard</h1>
         </div>
+        <div class="dashboards_cards">
+          <div class="dashboard_card">
+            <i class='bx bx-like'></i>
+            <p>Total Likes</p>
+            <h1>50,120</h1>
+          </div>
+          <div class="dashboard_card">
+            <i class='bx bx-chat'></i>
+            <p>Comments</p>
+            <h1>20,120</h1>
+          </div>
+          <div class="dashboard_card">
+            <i class='bx bx-share'></i>
+            <p>Share</p>
+            <h1>10,120</h1>
+          </div>
+        
+        </div>
       </div>
     </main>
   </div>
