--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div class="nav_list_bottom">
         <ul>
           <li> <i class='bx bx-exit'></i><a href="#"></i>Logout</a></li>
-          <li><i class='bx bx-moon' id="moon"></i><a href="#"> Dark mode</a><input type="checkbox" class="switch" name=""
-              id=""></li>
+          <li><i class='bx bx-moon' id="moon"></i><a href="#"> Dark mode</a><input type="checkbox" class="switch"
+              name="" id=""></li>
         </ul>
       </div>
     </nav>
@@ -38,41 +38,67 @@
       <header class="head">
         <i class='bx bx-menu'></i>
         <div class="search">
-            <i class='bx bx-search-alt-2'></i>
-            <input type="text" placeholder="Search here...">
+          <i class='bx bx-search-alt-2'></i>
+          <input type="text" placeholder="Search here...">
         </div>
         <div class="profile_img"> <img src="./images/profile.jpg" alt=""></div>
-    </header>
-    <div>
-      <div class="main">
-        <div class="dashboards_descriptions">
+      </header>
+      <div>
+        <div class="main">
+          <div class="dashboards_descriptions">
             <div class="speed_icons">
-                <i class='bx bx-stopwatch'></i>
+              <i class='bx bx-stopwatch'></i>
             </div>
-              <h1>Dashboard</h1>
+            <h1>Dashboard</h1>
+          </div>
+          <div class="dashboards_cards">
+            <div class="dashboard_card">
+              <i class='bx bx-like'></i>
+              <p>Total Likes</p>
+              <h1>50,120</h1>
+            </div>
+            <div class="dashboard_card">
+              <i class='bx bx-chat'></i>
+              <p>Comments</p>
+              <h1>20,120</h1>
+            </div>
+            <div class="dashboard_card">
+              <i class='bx bx-share'></i>
+              <p>Share</p>
+              <h1>10,120</h1>
+            </div>
+          </div>
+          <div class="recents_div">
+            <div class="active">
+              <div class="speed_icons">
+                <i class='bx bx-stopwatch'></i>
+              </div>
+              <h2>Recent Activity</h2>
+           </div>
+           <table>
+            <tr>
+              <th><input type="checkbox" class="checkbox"></th>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Joined</th>
+              <th>Type</th>
+              <th>Status</th>
+          </tr>
+          <tr>
+            <th><input type="checkbox" class="checkbox"></th>
+            <td>Prem Shahi</td>
+            <td>premshahi@gmail.com</td>
+            <td>2022-02-12</td>
+            <td>New</td>
+            <td>Liked</td>
+        </tr>
+          </table>
+          </div>
+
         </div>
-        <div class="dashboards_cards">
-          <div class="dashboard_card">
-            <i class='bx bx-like'></i>
-            <p>Total Likes</p>
-            <h1>50,120</h1>
-          </div>
-          <div class="dashboard_card">
-            <i class='bx bx-chat'></i>
-            <p>Comments</p>
-            <h1>20,120</h1>
-          </div>
-          <div class="dashboard_card">
-            <i class='bx bx-share'></i>
-            <p>Share</p>
-            <h1>10,120</h1>
-          </div>
-        
-        </div>
-      </div>
     </main>
   </div>
-  
+
 </body>
 
 </html>
