--- a/index.html
+++ b/index.html
@@ -74,25 +74,73 @@
                 <i class='bx bx-stopwatch'></i>
               </div>
               <h2>Recent Activity</h2>
-           </div>
-           <table>
-            <tr>
-              <th><input type="checkbox" class="checkbox"></th>
-              <th>Name</th>
-              <th>Email</th>
-              <th>Joined</th>
-              <th>Type</th>
-              <th>Status</th>
-          </tr>
-          <tr>
-            <th><input type="checkbox" class="checkbox"></th>
-            <td>Prem Shahi</td>
-            <td>premshahi@gmail.com</td>
-            <td>2022-02-12</td>
-            <td>New</td>
-            <td>Liked</td>
-        </tr>
-          </table>
+            </div>
+            <table>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Joined</th>
+                <th>Type</th>
+                <th>Status</th>
+              </tr>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <td>Prem Shahi</td>
+                <td>premshahi@gmail.com</td>
+                <td>2022-02-12</td>
+                <td>New</td>
+                <td>Liked</td>
+              </tr>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <td>Deepa Chand</td>
+                <td>deepachand@gmail.com</td>
+                <td>2022-02-12</td>
+                <td>Member</td>
+                <td>Liked</td>
+              </tr>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <td>Manisha Chand</td>
+                <td>prakashhai@gmail.com</td>
+                <td>2022-02-12</td>
+                <td>Member</td>
+                <td>Liked</td>
+              </tr>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <td>Prem Shahi</td>
+                <td>manishachand@gmail.com</td>
+                <td>2022-02-13</td>
+                <td>New</td>
+                <td>Liked</td>
+              </tr>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <td>Man Shahi</td>
+                <td>pratimashhai@gmail.com</td>
+                <td>2022-02-13</td>
+                <td>Member</td>
+                <td>Liked</td>
+              </tr>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <td>Ganesh Chand</td>
+                <td>manshahi@gmail.com</td>
+                <td>2022-02-14</td>
+                <td>New</td>
+                <td>Liked</td>
+              </tr>
+              <tr>
+                <th><input type="checkbox" class="checkbox"></th>
+                <td>Bikash Chand</td>
+                <td>ganeshchand@gmail.com</td>
+                <td>2022-02-15</td>
+                <td>Member</td>
+                <td>Liked</td>
+              </tr>
+            </table>
           </div>
 
         </div>
